re-build, use  replace  repair bug that would display horizontal scroll bar in mobile device

--- a/source/css/1864fe78.style.css
+++ b/source/css/1864fe78.style.css
@@ -924,7 +924,7 @@
   top: 0;
   border: 1px solid #eef2f8;
   background-color: #FFFFFF;
-  z-index: 2;
+  z-index: 3;
   -webkit-transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1); }
   @media only screen and (min-width: 768px) {
@@ -966,9 +966,9 @@
   padding: 0 0px;
   -webkit-transition: left 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   transition: left 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-  z-index: 3;
-  left: -240px;
+  z-index: 4;
   width: 240px;
+  left: -240px;
   -webkit-transform: translateZ(0);
           transform: translateZ(0); }
   @media only screen and (max-width: 768px) {
@@ -977,15 +977,15 @@
   @media only screen and (max-width: 992px) and (min-width: 768px) {
     #sidebar {
       padding: 0 10px;
-      left: -100px;
-      width: 100px; } }
+      width: 100px;
+      left: -100px; } }
   @media only screen and (min-width: 992px) {
     #sidebar {
       left: 0;
       padding: 0 10px;
       border-right: 1px solid #d9d9d9;
-      left: -250px;
-      width: 250px; } }
+      width: 250px;
+      left: -250px; } }
 
 #onside {
   display: none; }
@@ -1055,7 +1055,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 2;
+  z-index: 3;
   overflow: hidden;
   background-color: #000;
   opacity: 0;
